# f1-race-optimizer

./: .gitattributes  README.md  pyproject.toml  requirements.txt
.github/scripts/: check_race_proximity.py
.github/workflows/: daily-pipeline.yml  manual-rebuild.yml  rebuild-dashboard.yml  test.yml
data/circuits/: spielberg_2023.json  spielberg_2024.json  spielberg_2025.json
docs/: historical.es.html  historical.html  index.es.html  index.html  quali.es.html  quali.html  standings.es.html  standings.html  strategy.es.html  strategy.html
docs/data/: state.json
src/: analyze.py  calendar.py  client.py  dashboard.py  fetch.py  models.py  predict.py  strategy.py
templates/: base.html  dashboard.html  historical.html  quali.html  standings.html  strategy.html
test_out/: historical.es.html  index.es.html  index.html  quali.es.html  standings.es.html  standings.html
