[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-race-optimizer"
version = "0.1.0"
description = "F1 race strategy optimizer using OpenF1 data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
